plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.tutti'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ── Spring Boot Starters ──
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'        // Observation API 활성화 (HTTP 메트릭 필수)

    // ── Monitoring (Prometheus 메트릭 수집) ──
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0' // JSON 구조화 로그 (Loki/Promtail 완전 호환)
    implementation 'org.springframework.boot:spring-boot-starter-webflux'   // WebClient for AI server calls
    implementation 'org.springframework.boot:spring-boot-starter-data-redis' // Redis: 요청 큐잉 + SSE 멀티 Pod 동기화

    // ── Database ──
    runtimeOnly 'org.postgresql:postgresql'

    // ── JWT ──
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // ── API Documentation ──
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // ── Google OAuth ──
    implementation 'com.google.api-client:google-api-client:2.7.2'

    // ── Utilities ──
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ── Test ──
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // ── H2 for tests ──
    testRuntimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}

// ── Jar 파일명 고정 (Docker 빌드 최적화) ──
bootJar {
    archiveFileName = 'tutti-main-server.jar'
}
